[package]
name = "cleasby_vigfusson_dictionary"
version = "1.0.0"
authors = ["stscoundrel / Sampo Silvennoinen"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stscoundrel/cleasby-vigfusson-dictionary-rs"
description = """
The Cleasby/Vigfusson Old Norse to English Dictionary for Rust
"""
edition = "2018"
exclude = ["tests/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = { version = "1.21", features = ["json"] }
